--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,24 +8,34 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "aiofiles>=24.1.0",
-    "astropy>=7.1.0",
-    "async-siril>=0.1.5",
-    "asyncio>=3.4.3",
-    "cappa>=0.29.0",
-    "structlog>=25.4.0",
+    "photonyx-cli",
 ]
 
 [project.scripts]
-px = "photonyx.main:main"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+px = "photonyx_cli.main:main"
 
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
     "ruff>=0.12.4",
     "ty>=0.0.1a15",
 ]
+
+[tool.uv]
+package = true
+
+[tool.uv.workspace]
+members = [
+    "packages/photonyx.engine",
+    "packages/photonyx.cli",
+    "packages/photonyx.common",
+]
+
+[tool.ruff]
+# Allow lines to be as long as 120.
+line-length = 120
+extend-exclude = ["**/generated/*"]
+
+[tool.uv.sources]
+photonyx-cli = { workspace = true }
